<?xml version="1.0"?>
<package format="2">
  <name>pandora_arm_hardware_interface</name>
  <version>0.0.0</version>
  <description>Contains pandora arm hardware interface</description>

  <maintainer email="gkourosg@yahoo.gr">George Kouros</maintainer>

  <license>BSD</license>
  
  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_hardware_interface/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_hardware_interface</url>  

  <author>Chris Zalidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
    
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>pandora_sensor_msgs</depend>
  <depend>pluginlib</depend>

  <export>
    <controller_interface plugin="${prefix}/co2_sensor_controller.xml"/>
    <controller_interface plugin="${prefix}/thermal_sensor_controller.xml"/>
  </export>
</package>
