<?xml version="1.0"?>
<package>
  <name>pandora_controllers</name>
  <version>0.0.0</version>
  <description>Containts pandora controller packages</description>

  <maintainer email="apostoee@gmail.com">Evangelos Apostolidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_controllers/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_controllers</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>pandora_dynamixel_controller</run_depend>
  <run_depend>pandora_imu_controller</run_depend>
  <run_depend>pandora_linear_motor_controller</run_depend>
  <run_depend>pandora_motor_controller</run_depend>
  <run_depend>pandora_xmega_controller</run_depend>

  <export>
    <metapackage/>
  </export>  
</package>
