<?xml version="1.0"?>
<package>
  <name>pandora_leddar_hardware_interface</name>
  <version>0.0.0</version>
  <description>The pandora_leddar_hardware_interface package</description>

  <maintainer email="gkourosg@yahoo.gr">George Kouros</maintainer>
  <license>BSD</license>
  <author email="gkourosg@yahoo.gr">George Kouros</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>pluginlib</run_depend>


  <export>
    <controller_interface plugin="${prefix}/leddar_sensor_controller.xml"/>
  </export>
</package>
