<?xml version="1.0"?>
<package format="2">
  <name>pandora_linear_motor_hardware_interface</name>
  <version>0.0.0</version>
  <description>Contains pandora linear motor hardware interface.</description>

  <maintainer email="gkourosg@yahoo.gr">George Kouros</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_hardware_interface/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_hardware_interface</url>
  
  <author>Evangelos Apostolidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>serial</depend>

  <export>
  </export>
</package>
